<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rgReportType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioDailyReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/daily_report" />

        <RadioButton
            android:id="@+id/radioMonthlyReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_report" />

        <RadioButton
            android:id="@+id/radioYearlyReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearly_report" />
    </RadioGroup>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"/>

</LinearLayout>