<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    
    <TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
	    android:id="@+id/tblReportSummary">
	    
        <TableRow
        	android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
       	 	android:layout_weight="1">
    
		    <TextView
		        android:id="@+id/lblReportTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:layout_weight=".33"
		        android:layout_span="2"/>
		    
		    <Button 
		        android:id="@+id/btnChangeDateOrReportType"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="12sp"
		        android:text="@string/change_date_or_report_type"
		        android:textColor="@android:color/white"
	    		android:background="@+drawable/button_shape"
		        android:layout_weight=".33" />
		 </TableRow>
		 
        <TableRow
        	android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
       	 	android:layout_weight="1"
       	 	android:id="@+id/rowStastics">
    
		    <TextView
		        android:id="@+id/lblSummary"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:layout_span="2"
		        android:layout_weight=".33"
		        android:text="@string/stastics"/>
		    
		    <TextView
		        android:id="@+id/txtSummary"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="12sp"
		        android:layout_span="1"
		        android:layout_weight=".33"/>
		    
		 </TableRow>
	</TableLayout>
    
   <TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/tblReportSummary"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="10dp"
	    android:id="@+id/tblReportHeader">
		  
     	<TableRow
        	android:id="@+id/trHeader"
        	android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content">
		   <TextView
		        android:id="@+id/headerUserName"
		        android:layout_width="0dp"
		        android:layout_height="50dp"
		        android:layout_marginRight="1dp"
		        android:background="@+color/blue"
		        android:textColor="@android:color/white"
		        android:gravity="center"
		        android:text="@string/table_header_user_name"
		        android:layout_weight=".15"/>
		       
		   <TextView
		        android:id="@+id/headerOutcomeType"
		        android:layout_width="0dp"
		        android:layout_height="50dp"
		        android:layout_marginRight="1dp"
		        android:background="@+color/blue"
		        android:textColor="@android:color/white"
		        android:gravity="center"
		        android:text="@string/table_header_outcome_type"
		        android:layout_weight=".15"/>
		   
		   <TextView
		        android:id="@+id/headerOutcome"
		        android:layout_width="0dp"
		        android:layout_height="50dp"
		        android:layout_marginRight="1dp"
		        android:background="@+color/blue"
		        android:textColor="@android:color/white"
		        android:gravity="center"
		        android:text="@string/table_header_outcome"
		        android:layout_weight=".15"/>
		   
		  	<TextView
		        android:id="@+id/headerTime"
		        android:layout_width="0dp"
		        android:layout_height="50dp"
		        android:layout_marginRight="1dp"
		        android:background="@+color/blue"
		        android:textColor="@android:color/white"
		        android:gravity="center"
		        android:text="@string/table_header_time"
		        android:layout_weight=".3"/>
		  	
		  	<TextView
		        android:id="@+id/headerRemark"
		        android:layout_width="0dp"
		        android:layout_height="50dp"
		        android:background="@+color/blue"
		        android:textColor="@android:color/white"
		        android:gravity="center"
		        android:text="@string/table_header_remark"
		        android:layout_weight=".25"/>
		   <!-- Header  -->
		</TableRow>
	</TableLayout>
   
   <ScrollView
       android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
       android:layout_below="@+id/tblReportHeader">
	   <TableLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/tblReport">
		    
	   </TableLayout>
  	</ScrollView>
    
</RelativeLayout>
