<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <Button
        android:id="@+id/btnSetSMSReceiver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@+drawable/button_shape"
        android:text="@string/btn_set_receiver"
        android:textSize="12sp" 
        android:textColor="@android:color/white"/>
    
    <Button
        android:id="@+id/btnDataIntegration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSetSMSReceiver"
        android:layout_marginTop="10dp"
        android:background="@+drawable/button_shape"
        android:text="@string/btn_data_integration"
        android:textSize="12sp" 
        android:textColor="@android:color/white"/>
    
    <Button
        android:id="@+id/btnExit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDataIntegration"
        android:layout_marginTop="10dp"
        android:background="@+drawable/button_shape"
        android:text="@string/btn_exit"
        android:textSize="12sp" 
        android:textColor="@android:color/white"/>

</RelativeLayout>
