<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center">
    
    <TableLayout 
        android:id="@+id/tblUpdateAccount"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
        
        <TableRow
            android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
            
            <TextView
		        android:id="@+id/txtOutcomeType"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_outcome_type"/>
    
		    <Spinner
		        android:id="@+id/spnOutcomeType"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:entries="@array/outcome_types"/>
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
		    
            <TextView
		        android:id="@+id/txtOutcome"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_outcome" />

			<EditText
			    android:id="@+id/etxOutcome"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:inputType="numberDecimal" />
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
			
            <TextView
		        android:id="@+id/txtRemark"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_remark" />

			<EditText
			    android:id="@+id/etxRemark"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:inputType="text"
			    android:ems = "10"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
